2002-06-13  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-file.c:
	(nautilus_file_get_symbolic_link_target_uri): Escape the symlink
	name before constructing the uri.  Fixes #84004.

2002-06-12  Damon Chaplin  <damon@ximian.com>

	* src/nautilus-property-browser.c (nautilus_property_browser_init): 
	Add a 'Help' button on the bottom-left of the dialog. Also used
	gtk_window_set_default_size() rather than gtk_widget_set_size_request()
	so the dialog grows if necessary.
	(help_button_callback): new callback to show the help page.
	Based on patch from Satyajit Kanungo  <satyajit.kanungo@wipro.com>.

	Fixes bug #83524.

2002-06-12  Damon Chaplin  <damon@ximian.com>

	* test/Makefile.am (INCLUDES): 
	* src/Makefile.am (INCLUDES): 
	* components/tree/Makefile.am (INCLUDES): 
	* components/throbber/Makefile.am (INCLUDES): 
	* components/text/Makefile.am (INCLUDES): 
	* components/notes/Makefile.am (INCLUDES): 
	* components/news/Makefile.am (INCLUDES): 
	* components/music/Makefile.am (INCLUDES): 
	* components/history/Makefile.am (INCLUDES): 
	* components/hardware/Makefile.am (INCLUDES): use
	$(prefix)/${DATADIRNAME}/locale rather than $(datadir)/locale so
	it works on Solaris.

2002-06-03  David Emory Watson  <dwatson@cs.ucr.edu>

	* src/file-manager/fm-list-view.c:
	(get_derfault_zoom_level): New, protects us from illegal preferences.
	(set_zoom_level_from_metadata_and_preferences),
	(fm_list_view_reset_to_defaults),
	(fm_list_view_set_zoom_level),
	(fm_list_view_restore_default_zoom_level): Update.
	(fm_list_view_scale_font_size): Replace switch with loop and always
	use default font at default zoom level.
	(click_policy_changed_callback): Make underlines appear or disappear
	when the click policy changes.

2002-06-02  David Emory Watson  <dwatson@cs.ucr.edu>

	* components/text/nautilus-text-view.c:
	(nautilus_text_view_instance_init): Turn on word wrapping.

2002-06-12  Alexander Larsson  <alla@lysator.liu.se>
